social media extras

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <title>Coming Soon</title>
         <meta charset="UTF-8">
+        <meta property="og:title" content="Work in Progress">
+        <meta property="og:description" content="Haylie Toth's portfolio, creative developer.">
+        <meta property="og:image" content="images/thumbnail.png">
+        
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
