--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta property="og:title" content="Work in Progress">
         <meta property="og:description" content="Haylie Toth's portfolio, creative developer.">
-        <meta property="og:image" content="images/thumbnail.png">
+        <meta property="og:image" content="https://github.com/haylietoth/haylietoth.github.io/blob/master/images/thumbnail.jpg">
         
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
