Updates not working as expected

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <p>
               Thanks for visiting! I am currently working on updating this site. <br />
             </p>
-            <button id="flip" type="button" class="btn btn-default">Get to know me in the meantime</button>
+         <!--   <button id="flip" type="button" class="btn btn-default">Get to know me in the meantime</button>
             <div id="panel" class="wrapper">
                 <div class="roles">
                     <div>
@@ -87,7 +87,7 @@
                     </div>
                 </div>
                 <script  src="js/index.js"></script>
-            </div>
+            </div> -->
         </div>
     </body>
 </html>
