--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
         <meta property="og:title" content="Portfolio">
         <meta property="og:description" content="Haylie Toth's portfolio, creative developer.">
         <meta property="og:image" content="">
+        
         <link rel='stylesheet' href='/styles/common.css'/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
         <script src="/scripts/common.js"></script>
     </head>
     
