few structure updates and styling

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta property="og:title" content="Portfolio">
         <meta property="og:description" content="Haylie Toth's portfolio, creative developer.">
         <meta property="og:image" content="">
-        
+
         <link rel='stylesheet' href='/styles/common.css'/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +16,9 @@
     </head>
     
     <body>
+      <h1>Design Portfolio</h1>
       <div>
+        <h2>CMU and Previous Experience</h2>
         <p>My main experience working with design is through implementing provided designs/mock-ups into the website.</p>
         <p>Prior to CMU, I worked at Sherwin-Williams where I worked on multiple website redesigns. The biggest being the careers website, which was my first lead role in a redesign. I worked directly with marketing and our UX/UI team to implement designs. This included responsive design, animations, specific/necessary brand styling, and technical updates. This is where my interest in the design side of web development started and what inspired me to move into front-end specific work.</p>
         <p>Once joining CMU, I was tasked with the ApplyGrad redesign where I implemented designs from student studies out of HCII. While ApplyGrad is no longer being updated due to a decision to use Slate instead, I've repurposed the design considerations from that and have been applying them to the GS Audit application. You can view the style guide, wireframes, and prototypes for that below.</p>
@@ -36,7 +38,9 @@
         </p>
       </div>
       <div>
+        <h2>Additional Experience</h2>
         <p>In addition to my role here at CMU, I have worked on other websites on the side as well. These include portfolio websites, a wedding website, a day spa website, and themed party invites.</p>
+        <hr>
         <p>
           Portfolio Work:<br>
           These sites have been worked on in tandem with the designers they are for. Designs are driven from mockups and existing examples on other websites. These sites are done in a way so that the content owner has as much control as possible. Recently, this has also included the ability to control color schemes which allows for flexibility in the design rather than forcing hard-coded values. 
@@ -52,6 +56,7 @@
           https://madeleine-work-dev-b847d126f6d6.herokuapp.com/ (dev environment. please note this is going through a redesign right now so there might be some kinks still being worked out)
         </p>
       </div>
+      <hr>
       <div>
         <p>
           Wedding Website:<br>
@@ -62,6 +67,7 @@
           [insert here]
         </p>
       </div>
+      <hr>
       <div>
         <p>
           Day Spa:<br>
@@ -77,7 +83,9 @@
           https://magnoliastudiopgh-0876e1639bba.herokuapp.com/
         </p>
       </div>
+      <hr>
       <div>
+        <h2>In Summary</h2>
         <p>With all that being said, I am more than confidant in my ability to make designs come to life in a website regardless of the type of design needed. I am also comfortable contributing to designs or providing educated feedback. Whether it's color theming, animations, content structure, or details like typography, usability, and accessibility, I am more than capable of being a useful tool for any redesign project.</p>
       </div>
     </body>
