quick link name change

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
           <h3>Website Links:</h3>
           <ul>
             <li>
-              <a class="link leftToRight" href="https://www.dirkelijah.com/" target="_blank" rel="noopener noreferrer">Dirk Elijah</a>
+              <a class="link leftToRight" href="https://www.dirkelijah.com/" target="_blank" rel="noopener noreferrer">Dirk Elijah Portfolio</a>
             </li>
             <li>
-              <a class="link leftToRight" href="https://madeleine-work-dev-b847d126f6d6.herokuapp.com/" target="_blank" rel="noopener noreferrer">Madeleine Edwards*</a>
+              <a class="link leftToRight" href="https://madeleine-work-dev-b847d126f6d6.herokuapp.com/" target="_blank" rel="noopener noreferrer">Madeleine Edwards Portfolio*</a>
               <span>*Please note this is a dev environment and is going through a redesign. Some aspects may be wonky due to work in progress.</span>
             </li>
           </ul>
