--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         
         <h2>Day Spa</h2> 
         <section>
-          <p>This is a new project, with styling inspired from the spa's instagram and content creator. The owner isn't technical at all and the site is relatively simple so instead of static mockups, we agreed upon a working dev site to act as the mockup instead.</p>
+          <p>This is an old project, with styling inspired from the spa's instagram and content creator. The owner isn't technical at all and the site is relatively simple so instead of static mockups, we agreed upon a working dev site to act as the mockup instead. Owner closed up shop for personal reasons and site never went live.</p>
           <h3>Working Mockups:</h3>
           <a class="link leftToRight" href="https://magnoliastudiopgh-0876e1639bba.herokuapp.com/" target="_blank" rel="noopener noreferrer">Magnolia Studio Pgh*</a>
           <span>*Please note this is a dev environment. Some aspects may be wonky due to work in progress.</span>
